--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -27,6 +27,17 @@
                 "kind": "build",
                 "isDefault": true
             }
+        },
+        {
+            "type": "hxml",
+            "label":"tests",
+            "file": "test.hxml",
+            "problemMatcher": [
+                "$haxe-absolute",
+                "$haxe",
+                "$haxe-error",
+                "$haxe-trace"
+            ]
         }
     ]
 }
