--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,21 +23,22 @@
                 "$haxe-error",
                 "$haxe-trace"
             ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            }
+            "group": "build"
         },
         {
             "type": "hxml",
-            "label":"tests",
+            "label": "tests",
             "file": "test.hxml",
             "problemMatcher": [
                 "$haxe-absolute",
                 "$haxe",
                 "$haxe-error",
                 "$haxe-trace"
-            ]
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
